feito metodo de buscar comentarios por evento e eventos anteriores
