# Event+/webapi.event+/Interfaces/IComentariosEventoRepository.cs
@@ -8,5 +8,8 @@ namespace webapi.event_.Interfaces
         void Deletar(Guid id);
         List<ComentariosEvento> Listar();
         ComentariosEvento BuscarPorId(Guid id);
+
+        List<ComentariosEvento>BuscarPorEvento(Guid id);
+
     }
 }
