# Event+/webapi.event+/Repositories/ComentariosEventoRepository.cs
@@ -83,7 +83,7 @@ namespace webapi.event_.Repositories
                 _context.ComentariosEvento.Add(comentarioEvento);
 
                 _context.SaveChanges();
-                
+
             }
             catch (Exception)
             {
@@ -135,6 +135,38 @@ namespace webapi.event_.Repositories
                         }
 
                     }).ToList();
+            }
+            catch (Exception)
+            {
+
+                throw;
+            }
+        }
+
+        public List<ComentariosEvento> BuscarPorEvento(Guid id)
+        {
+            try
+            {
+                return _context.ComentariosEvento
+                              .Select(c => new ComentariosEvento
+                              {
+                                  IdComentarioEvento = c.IdComentarioEvento,
+                                  Descricao = c.Descricao,
+                                  Exibe = c.Exibe,
+                                  IdUsuario = c.IdUsuario,
+                                  IdEvento = c.IdEvento,
+
+                                  Usuario = new Usuario
+                                  {
+                                      Nome = c.Usuario!.Nome
+                                  },
+
+                                  Evento = new Evento
+                                  {
+                                      NomeEvento = c.Evento!.NomeEvento,
+                                  }
+
+                              }).Where(c => c.IdEvento == id).ToList();
             }
             catch (Exception)
             {
